# font-eaw

./: .gitignore  CHANGES.md  COPYING  Makefile  README.md  create_visible_space.py  dodo.py  eaw-fullwidth-ja.json  eaw-fullwidth-wide.json  ft.py  gls.py  install-linux.sh  pyproject.toml  ttcunpack.py  util.py
.github/workflows/: main.yml
locale/: UTF-8-EAW-CONSOLE
sample/: sample.py  sample.txt  style.sh
sample/cowsay/: 10-lipsum.txt  11-quick_brown_fox.txt  12-linux.txt  14-polano_italic.txt  20-circled_number.txt  21-roman_number.txt  30-amb.txt  40-melos.txt  40-nerdfont.txt  70-fish.txt  80-lipsum.txt  81-apology.txt  81-thales_theorem.txt  82-euclids_elements.txt  82-karamazov.txt  90-fish.txt  91-the-brothers-karamazov.txt  91-the_brothers_karamazov.txt  92-crime-and-punishment.txt  92-crime_and_punishment.txt  cowsay.sh
sample/error/: error1.py  error2.py  error3.py
sample/progress/: progress.sh  run.sh
src/: Makefile
src/bizudgothic/: BIZUDGothic-Bold.ttf.etag  BIZUDGothic-Regular.ttf.etag  Makefile  OFL.txt.etag
src/bizudmincho/: BIZUDMincho-Bold.ttf.etag  BIZUDMincho-Regular.ttf.etag  Makefile  OFL.txt.etag
src/iosevka/: Makefile
src/nerdfont/: Makefile  NerdFontsSymbolsOnly.zip.etag
src/notoemoji/: Makefile  NotoEmoji%5Bwght%5D.ttf.etag  OFL.txt.etag
stats/: EAW-CONSOLE-Regular.txt  EAW-FULLWIDTH-Regular.txt
tests/: test_eaw_console.py  test_eaw_fullwidth.py
