[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "font-eaw"
version = "0.7.1"
description = ""
authors = [
    {name = "HAMANO Tsukasa"},
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pillow>=10.4.0,<11.0.0",
    "pytest>=8.3.2,<9.0.0",
    "fonttools>=4.61.1",
    "doit>=0.36.0,<0.37.0",
    "click>=8.1.7,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.5,<0.7.0",
]

[tool.pytest.ini_options]
pythonpath = "."
